# registry

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: npm-publish.yml  rust-checks.yml  rust_checks.yml  typescript-check.yml
input/: globals.json  penumbra-testnet-deimos-6.json  penumbra-testnet-deimos-7.json  penumbra-testnet-deimos-8.json
input/chains/: penumbra-1.json  penumbra-testnet-clinic-1.json  penumbra-testnet-deimos-6.json  penumbra-testnet-deimos-7.json  penumbra-testnet-deimos-8-x6de97e39.json  penumbra-testnet-deimos-8.json  penumbra-testnet-phobos-1.json  penumbra-testnet-phobos-2-x4120f355.json  penumbra-testnet-phobos-2.json  penumbra-testnet-phobos-3.json
input/penumbra-testnet-deimos-6/: ibc-assets.json  native-assets.json
npm/: CHANGELOG.md  eslint.config.js  eslint.config.mjs  package.json  penumbra-zone-protobuf-10.0.0.tgz  pnpm-lock.yaml  tsconfig.json  vite-env.d.ts  vite.config.ts
npm/.changeset/: big-swans-peel.md  brave-cows-hunt.md  chatty-onions-happen.md  clean-bikes-turn.md  clever-keys-impress.md  cyan-cheetahs-carry.md  dull-phones-confess.md  eleven-games-film.md  happy-windows-mate.md  healthy-chairs-mate.md  lucky-apes-perform.md  metal-toys-unite.md  perfect-worms-teach.md  shaggy-dogs-attend.md  small-islands-bathe.md  spotty-carpets-bathe.md  strange-ways-fly.md  swift-coats-love.md  tricky-donkeys-buy.md  warm-shoes-tell.md  weak-crabs-count.md  wise-rats-cry.md
npm/src/: bundled.test.ts  bundled.ts  client.test.ts  client.ts  github.ts  globals.test.ts  globals.ts  index.ts  json.ts  options.ts  preview.ts  registry.test.ts  registry.ts  remote.test.ts  remote.ts  utils.test.ts  utils.ts
npm/src/utils/: base64.test.ts  base64.ts  commit-info-vite-plugin.ts  object-mapping.test.ts  object-mapping.ts  sha256.test.ts  sha256.ts  testnet-parser.test.ts  testnet-parser.ts
registry/: globals.json  penumbra-testnet-deimos-6.json  penumbra-testnet-deimos-7.json  penumbra-testnet-deimos-8.json
registry/chains/: penumbra-1.json  penumbra-1_ledger.h  penumbra-testnet-clinic-1.json  penumbra-testnet-deimos-6.json  penumbra-testnet-deimos-7.json  penumbra-testnet-deimos-8-x6de97e39.json  penumbra-testnet-deimos-8-x6de97e39_ledger.h  penumbra-testnet-deimos-8.json  penumbra-testnet-phobos-1.json  penumbra-testnet-phobos-1_ledger.h  penumbra-testnet-phobos-2-x4120f355.json  penumbra-testnet-phobos-2-x4120f355_ledger.h  penumbra-testnet-phobos-2.json  penumbra-testnet-phobos-2_ledger.h  penumbra-testnet-phobos-3.json
src/: error.rs  lib.rs  metadata.rs  parser.rs  processor.rs  querier.rs  sanitize.rs
tests/: sanitize.rs
tools/compiler/: Cargo.toml
tools/compiler/src/: assetlist_schema.rs  error.rs  lib.rs  main.rs  parser.rs  processor.rs  querier.rs  validator.rs
tools/compiler/src/github/: assetlist_schema.rs  mod.rs  types.rs
tools/compiler/tests/: test_copy_globals.rs  test_get_chain_configs.rs  test_parser.rs  test_processor.rs  test_reset_registry_dir.rs
