[package]
name = "penumbra-registry"
version = "1.0.0"
edition = "2021"

[dependencies]
penumbra-asset = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.71.0", package = "penumbra-asset" }
penumbra-proto = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.71.0", package = "penumbra-proto", default-features = false }

anyhow = "1.0.82"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
regress = "0.9.1"
reqwest = { version = "0.12.3", features = ["json"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
