[package]
name = "penumbra-registry"
version = "2.0.0"
edition = "2021"

[dependencies]
# Commit dep until badges update to Metadata is shipped in a point release
penumbra-asset = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "37f604fcf24653e5777d9a8d4bddb468e889560a", package = "penumbra-asset" }
penumbra-proto = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "37f604fcf24653e5777d9a8d4bddb468e889560a", package = "penumbra-proto", default-features = false }

anyhow = "1.0.91"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
regress = "0.10.1"
tempdir = "0.3.7"
thiserror = "1.0.65"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
