[package]
name = "penumbra-registry"
version = "2.0.0"
edition = "2021"
default-run = "penumbra-registry"

[dependencies]
# Commit dep until badges update to Metadata is shipped in a point release
penumbra-asset = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "871551badcd71f2bafd15f3dbb90ac54a6639449", package = "penumbra-sdk-asset" }
penumbra-proto = { git = "https://github.com/penumbra-zone/penumbra.git", rev = "871551badcd71f2bafd15f3dbb90ac54a6639449", package = "penumbra-sdk-proto", default-features = false }

anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["preserve_order", "raw_value"] }
regress = "0.10.1"
tempdir = "0.3.7"
thiserror = "1.0.65"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
image = "0.25.5"
color-thief = "0.2.2"
resvg = "0.44.0"
tiny-skia = "0.11.2"
